k8s/overlays/with-mockserver/backend-private-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-private
  labels:
    app: backend-private
spec:
  selector:
    app: backend-private
  ports:
    - port: 80
      targetPort: 3000
