k8s/overlays/with-mockserver/mock-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mock-ui
  labels:
    app: mock-ui
spec:
  selector:
    app: mock-ui
  ports:
    - port: 80
      targetPort: 8000
