k8s/overlays/with-mockserver/mockserver-private-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mockserver-private
  labels:
    app: mockserver-private
spec:
  selector:
    app: mockserver-private
  ports:
    - port: 80
      targetPort: 1080
