k8s/overlays/with-mockserver/mockserver-public-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mockserver-public
  labels:
    app: mockserver-public
spec:
  selector:
    app: mockserver-public
  ports:
    - port: 80
      targetPort: 1080
