k8s/overlays/with-mockserver/mockserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mockserver
  labels:
    app: mockserver
spec:
  selector:
    app: mockserver
  ports:
    - port: 80
      targetPort: 1080
